# UNIPA-EX-rs

./: Cargo.toml  README.md
src/: lib.rs  wasm.rs
src/common/: mod.rs  traits.rs
src/parsers/: mod.rs  wasm.rs
src/parsers/assignment_submit/: builder.rs  mod.rs  model.rs  parser.rs
src/parsers/class_profile/: mod.rs
src/parsers/classroom_reservation_status/: builder.rs  mod.rs  model.rs  parser.rs
src/parsers/course_evaluation/: builder.rs  mod.rs  model.rs  parser.rs
src/parsers/grades/: mod.rs
src/parsers/grades/grade_inquiry/: builder.rs  mod.rs  model.rs  parser.rs
src/parsers/grades/graduation_prediction/: builder.rs  mod.rs  model.rs  parser.rs
src/parsers/grades/license_prediction/: builder.rs  mod.rs  model.rs  parser.rs
src/parsers/grades/promotion_prediction/: builder.rs  mod.rs  model.rs  parser.rs
src/parsers/portal/: builder.rs  mod.rs  model.rs  parser.rs
src/parsers/portal/notification_detail/: builder.rs  mod.rs  model.rs  parser.rs
src/parsers/questionnaire/: mod.rs
src/parsers/questionnaire/questionnaire_list/: builder.rs  mod.rs  model.rs  parser.rs
src/parsers/student_info_inquiry/: builder.rs  mod.rs  model.rs  parser.rs
src/parsers/syllabus/: mod.rs
src/parsers/syllabus/search/: builder.rs  mod.rs  model.rs  parser.rs
src/parsers/syllabus/search_result/: builder.rs  mod.rs  model.rs  parser.rs
src/parsers/syllabus/view/: builder.rs  mod.rs  (+2 more)
src/parsers/test_answer_status/: builder.rs  mod.rs  model.rs  parser.rs
src/parsers/timetable/: mod.rs
src/utils/: error.rs  mod.rs
tests/: grade_inquiry.rs
(+11 files in other folders)
